--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
            </div>
            <!--Hidden checkbox(toggle)-->
            <input type="checkbox" id="menu-toggle">
-           <!--hamburger icon-->
+           <!--Hamburger icon-->
            <label for="menu-toggle" class="hamburger-label">
                <div class="bar"></div>
                <div class="bar"></div>
